[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Project Brain Games"
authors = ["AnnJessMay yesjessmay@mail.ru"]
packages = [{include = "brain_games"}]
repository = "https://github.com/AnnJessMay/python-project-49"
classifiers = ["Programming Language :: Python :: ^3.10"]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
